# anomaly-detection

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
anomaly_detection/: data_preprocessing.py
anomaly_detection/data/: data_preprocessing.py
anomaly_detection/models/: lstm_regression.py  ml_models.py  random_forest.py
data/: data.py
data/csv_files/: CPU Utilization-data-2025-04-06 13_46_22.csv  Disk I_O-data-as-joinbyfield-2025-04-06 13_49_45.csv  Disk Utilization-data-2025-04-06 13_49_09.csv  Load Average-data-as-joinbyfield-2025-04-06 13_47_48.csv  Memory Utilization-data-2025-04-06 13_48_28.csv  Network I_O-data-as-joinbyfield-2025-04-06 13_50_53.csv  Network Traffic-data-as-joinbyfield-2025-04-06 13_50_17.csv
models/: random_forest_scaler.pkl
